Facturas methods added
