# utils/models.js
@@ -19,6 +19,14 @@ var CuentasSchema = new Schema({
   referencia: String
 });
 
+var FacturasSchema = new Schema({
+  fecha: String,
+  idAdmin: String,
+  direccion: String,
+  numero: String,
+  estado: String  
+})
+
 // custom method to add string to end of name
 // you can create more important methods like name validations or formatting
 // you can also do queries and find similar users
@@ -26,8 +34,10 @@ var CuentasSchema = new Schema({
 // the schema is useless so far
 // we need to create a model using it
 var nCuentas = mongoose.model("nCuentas", CuentasSchema);
+var facturas = mongoose.model("facturas", FacturasSchema);
 
 // make this available to our users in our Node applications
 module.exports = {
-  nCuentas: nCuentas
+  nCuentas: nCuentas,
+  facturas: facturas
 };
